[Add]item index layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@ header {
 .headline {
 	font-size: 35px;
 	color: #38C5D1;
-	line-height: 90px;
+	line-height: 70px;
 	padding: 5px 0;
 	text-decoration: none;
 	display: inline;
@@ -84,5 +84,6 @@ header {
 
 
 .footer {
-	height: 200px;
+	height: 100px;
+	background-color: #38C5D1;
 }
