--- a/app/assets/stylesheets/user/notes.scss
+++ b/app/assets/stylesheets/user/notes.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the user/notes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.hello {
+	height: 270px;
+	margin-top: 45px;
+	background-color: #FBFBFB;
+}
