--- a/app/assets/stylesheets/user/items.scss
+++ b/app/assets/stylesheets/user/items.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the user/items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.item-box {
+	float: left;
+	margin: 20px;
+}
