--- a/app/views/user/notes/new.html.erb
+++ b/app/views/user/notes/new.html.erb
@@ -5,7 +5,7 @@
 	<%= form_with :model => @note, url:user_notes_path, method: :post, local: true, class:"form-horizontal" do |f| %>
 		<div>
 			<%= f.label "日付" %>
-			<%= f.date_select :date, use_month_numbers: true, date_separator: '/' %>
+			<%= f.date_select :date, use_month_numbers: true %>
 		</div>
 		<div>
 			<%= f.label "肌コンディション" %>
