--- a/app/views/user/my_items/index.html.erb
+++ b/app/views/user/my_items/index.html.erb
@@ -1,47 +1,62 @@
 <div class="container">
 	<%= render "layouts/main_button" %>
 
-<% if @my_item.errors.any? %>
-    <div id="error_explanation">
+<%# if @my_item.errors.any? %>
+<!--     <div id="error_explanation">
       <h2><%= @my_item.errors.count %>件のエラーが発生しました。</h2>
       <ul>
-      <% @my_item.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+      <%# @my_item.errors.full_messages.each do |message| %>
+        <li><%#= message %></li>
+      <%# end %>
       </ul>
-    </div>
-<% end %>
+    </div> -->
+<%# end %>
 
 	<%#= render "layouts/error_messages", model: @my_item %>
 	<%= notice %>
 
-
-	<h3>マイスキンケア登録</h3>
-	<%= form_with :model => @my_item, url:user_my_items_path, method: :post, local: true, class:"form-horizontal" do |f| %>
-		<%= f.label "商品名" %>
-		<%= f.text_field :item_name %>
-		<%= f.label "メーカー" %>
-		<%= f.text_field :maker %>
-		<%= f.submit "登録する" %>
-	<% end %>
-
-	<h3>マイアイテム一覧</h3>
-	<table class="table">
-		<thead>
-			<tr>
-				<th>商品名</th>
-				<th>メーカー</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-		<% @my_items.each do |my_item| %>
-			<tr>
-				<td><%= my_item.item_name %></td>
-				<td><%= my_item.maker %></td>
-				<td><%= link_to "削除する", user_my_item_path(my_item), method: :delete, class: "btn btn-warning" %></td>
-			</tr>
-		<% end %>
-		</tbody>
-	</table>
+	<div class="row">
+		<div class="col-xs-4">
+			<h3>マイスキンケア登録</h3>
+			<%= form_with :model => @my_item, url:user_my_items_path, method: :post, local: true, class:"form-horizontal" do |f| %>
+				<div>
+					<p>商品名</p>
+					<%= f.text_field :item_name, class: "col-xs-12" %>
+				</div>
+				<div>
+					<p>メーカー</p>
+					<%= f.text_field :maker, class: "col-xs-12" %>
+				</div>
+				<div>
+					<%= f.submit "登録する", class: "col-xs-12 btn btn-primary"%>
+				</div>
+			<% end %>
+		</div>
+		<div class="col-xs-8">
+			<h3>マイアイテム一覧</h3>
+			<table class="table" style="table-layout:fixed;width:100%;">
+				<colgroup>
+			        <col style="width:50%;">
+			        <col style="width:30%;">
+			        <col style="width:20%;">
+			    </colgroup>
+				<thead>
+					<tr>
+						<th>商品名</th>
+						<th>メーカー</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+				<% @my_items.each do |my_item| %>
+					<tr>
+						<td><%= my_item.item_name %></td>
+						<td><%= my_item.maker %></td>
+						<td><%= link_to "削除する", user_my_item_path(my_item), method: :delete, class: "btn btn-danger btn-sm" %></td>
+					</tr>
+				<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
