つぶやきデータレイアウト変更

--- a/app/assets/stylesheets/user/tweets.scss
+++ b/app/assets/stylesheets/user/tweets.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the user/tweets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.count-set {
+  float: left;
+  text-align: center;
+}
+
+.count {
+  font-size: 70px;
+}
+
+.count-label {
+  font-size: 12px;
+}
+
