--- a/app/views/user/items/index.html.erb
+++ b/app/views/user/items/index.html.erb
@@ -50,7 +50,7 @@
 
 
 	<div>
-		<h1>アイテム一覧</h1>
+		<h4>アイテム一覧</h4>
 
 
 		<% @items.each do |item| %>
@@ -65,7 +65,7 @@
 					data-star-on="<%= asset_path('star-on.png') %>"
 					data-star-off="<%= asset_path('star-off.png') %>"
 					data-star-half="<%= asset_path('star-half.png') %>"
-					data-score="<%= Review.where(item_id: item.id).average(:score) %>" ><br> <!-- あってる？ -->
+					data-score="<%= Review.where(item_id: item.id).average(:score).to_f.round(1) %>" ><br> <!-- あってる？ -->
 
 					<script>
 					//商品詳細の星/////////////////////////////////////////////////////////////////////////////////
@@ -83,7 +83,7 @@
 						});
 					</script>
 				</div>
-				<div><%= Review.where(item_id: item.id).average(:score) %></div>
+				<div><%= Review.where(item_id: item.id).average(:score).to_f.round(1) %></div>
 			</div>
 		<% end %>
 	</div>
