--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .main-visual {
-	whidth: 100%;
+	width: 100%;
 	height: 650px;
 	background-image: image-url("top.jpg");
 	background-size: cover;
