--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -7,3 +7,4 @@
 	<%= link_to "ログイン", new_user_session_path %>
 
 	<%= link_to "管理者ログイン", new_admin_session_path %>
+<%= link_to 'ゲストログイン（閲覧用）', user_homes_guest_sign_in_path, method: :post %>
